--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             scoreEl1.innerHTML = score;
             randomizeCoin();
           }
-          setTimeout(mooveMonster, 1000 / (score + 1));
+          setTimeout(mooveMonster, 1000 / (score * 0.1 + 1));
         } else {
           scoreEl2.innerHTML = score;
           gameOver.classList.add("show");
